fix mobile bleeding

--- a/src/styles/ept.css
+++ b/src/styles/ept.css
@@ -391,7 +391,7 @@ label.control-label {
   overflow: hidden;
   width: 100%;
   max-width: 100%;
-  z-index: 6;
+  z-index: 4;
 }
 
 .progress-bar {
@@ -452,7 +452,7 @@ label.control-label {
 .charlotte-modal-container {
   top: 0;
   z-index: 5;
-  height: 100%;
+  height: 0;
   width: 100%;
   left: 0;
   position: absolute;
@@ -467,11 +467,16 @@ label.control-label {
 }
 
 .charlotte-modal-container.show {
+  height: 100vh;
   opacity: 1;
   visibility: visible;
 }
 
 .charlotte-modal-content {
+  display: none;
+}
+
+.charlotte-modal-content.show {
   background-color: black;
   color: white;
   padding: 48px;
